--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,13 +14,17 @@
       color: #00ff00;
     }
 
+    &.didelis {
+      font-size: 55px;
+    }
+
     &.blogas {
       color: #ff0000;
     }
   }
 
   button {
-    border-radius: none;
+    border-radius: 0;
     border: none;
     background-color: #cfcfcf;
     font-size: 33px;
@@ -31,17 +35,8 @@
   }
 }
 
-// <div class="a">
-//    <div class="b"></div> <-----
-// </div>
-.a {
-  .b {
-  }
-}
-
-// <div class="a b"> <-----
-// </div>
-.a {
-  &.b {
-  }
+.reitingoPranesimas {
+  text-align: center;
+  font-size: 44px;
+  margin: 50px auto;
 }
